 * t/signature.t: further checks for prettify signatures (found a case
   where the new code caused a regression)
 * lib/Mail/DKIM/TextWrap.pm (flush): remember to update cur position
   when flushing text; use a "may_break" internal variable to know
   whether a linebreak is acceptable; other fixes
 * t/textwrap.t: another test case illustrating failure in TextWrap.pm

2008-11-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/TextWrap.pm (flush): new method to explicitly allow a
   break at the current point in the string
 * lib/Mail/DKIM/KeyValueList.pm (wrap): call flush() whenever changing
   TextWrap parameters (this should complete the fix for #2257046)

2008-11-06: Jason Long <jlong@messiah.edu>
 * t/signature.t: test Mark Martinec's bad-signature-wrapping bug

2008-11-06: Jason Long <jlong@messiah.edu>
 * t/verifier.t: use a "fake" dns implementation, so that this test
   will pass no matter the user's state of dns

2008-11-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm (query): changed API so that it now returns
   a list of Net::DNS::RR objects, rather than a Net::DNS::Packet object.
 * lib/Mail/DKIM/Policy.pm: update for the change to the DNS.pm api.
 * lib/Mail/DKIM/PublicKey.pm: update for the change to the DNS.pm api.

2008-11-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm (encode_qp, decode_qp): suppress a warning
   about an uninitialized value
 * lib/Mail/DKIM/Common.pm (message_originator, message_sender): if a
   From/Sender line is present, but blank, still return a valid object
 * t/public_key.t: new test to check for DNS problems

 -- VERSION 0.32 --

2008-05-09: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Algorithm/dk_rsa_sha1.pm: when populating a DomainKey
   signature's identity, record where the identity came from
 * lib/Mail/DKIM/DkSignature.pm (identity_source): make the source of
   the identity (i.e. sender header or from header) available as a
   method

2008-05-09: Jason Long <jlong@messiah.edu>