@@ -5,6 +5,8 @@
    when flushing text; use a "may_break" internal variable to know
    whether a linebreak is acceptable; other fixes
  * t/textwrap.t: another test case illustrating failure in TextWrap.pm
+ * lib/Mail/DKIM/KeyValueList.pm (wrap): call flush() right after the
+   ';' character; this is a further fix for #2257046.
 
 2008-11-10: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/TextWrap.pm (flush): new method to explicitly allow a
